Changes for baconbird:

0.4:
	Added key map configurability.

0.3 (2011-01-29):
	Added configurability through a configuration file.
	Added favorites timeline.
	Added "Open URLs in browser" key.
	Implemented highlighting of phrases within tweets.
	Implemented filters to hide certain tweets.
	Added "retweeted by me" and "retweets of me" timelines.
	Added "my timeline" and ability to view any other user timeline.
	Added saved searches.
	Added retweet timelines.
	Added favorites timeline.

0.2 (2010-10-21):
	Added detailed view of current tweet.
	Added keys to follow and unfollow other users.
	Added help screen.
	Added key to toggle favorite flag on tweets.
	Added key to show user timeline.
	Made short help more contextual.

0.1 (2010-10-05):
	Initial release.